--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     },
     "dependencies": {
         "babel-polyfill": "^6.26.0",
+        "inputmask": "^5.0.3",
         "jquery": "^3.4.1",
+        "jquery-validation": "^1.19.1",
         "smart-grid": "^2.1.2"
     },
     "lint-staged": {
