--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "yargs": "~13.2.4"
     },
     "dependencies": {
+        "air-datepicker": "^2.2.3",
         "babel-polyfill": "^6.26.0",
         "inputmask": "^5.0.3",
         "jquery": "^3.4.1",
